# ai-art-frame

./: .gitignore  README.md  configs.json  pyproject.toml
icon/: app icon.psb
imgs/: records.json
src/: config_manager.py  generator.py  gui.py  image_manager.py  logging_config.py  main.py  prompt.py  utils.py  voice.py  voice_control.py  voice_manager.py
src/gui_components/: general.py  history.py  setting.py  theme.py
src/managers/: config_manager.py  image_manager.py  sync_manager.py  upload_manager.py  voice_manager.py
