[project]
name = "ai-art-frame"
version = "0.1.0"
description = "Generate AI art for wall picture frame display using voice prompt."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",   # GUI framework (pulls in darkdetect)
    "flask>=3.1.3",           # web upload server (drop-in images from a phone)
    "pillow>=11.2.1",         # image handling (PIL)
    "pyaudio>=0.2.14",        # microphone capture for SpeechRecognition
    "qrcode>=8.2",            # QR code for the upload URL shown on the frame
    "requests>=2.32.5",       # HTTP calls to the OpenAI API
    "speechrecognition>=3.14.3",  # voice prompt -> text
]

# This is an application run via `python src/main.py`, not an installable
# package, so tell uv not to try to build/install the project itself.
[tool.uv]
package = false
